# ohmyCLI

./: .gitignore  README.md  pyproject.toml
src/config/: config_loader.py
src/core/: __init__.py
src/mycli/: __init__.py  __main__.py  banner.py  config.py  main.py  utils.py
src/mycli/commands/: __init__.py
src/mycli/commands/notes/: __init__.py  notes.py
src/mycli/commands/who_new/: __init__.py  who_new.py
src/mycli/commands/who_old/: __init__.py  who_old.py
