[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ohmycli"
version = "0.17.0"
description = "Un CLI modular y simple."
readme = "README.md"
authors = [{ name = "Flores-Oz" }]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ohmycli = "mycli.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
